objects/CMN_CaseComment__c.object
<CustomObject>
    <description>Custom Object used to store all the comments on the case which will be used for integration purpose</description>
    <fields>
        <fullName>CMN_Case__c</fullName>
        <description>Custom field used to relate the comments with Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Comments</relationshipLabel>
        <relationshipName>Case_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMN_CommentCreateDate__c</fullName>
        <description>Field used to store either the date sent by the target source system or the date when the comment was created in salesforce</description>
        <formula>IF( CMN_IsExternalComment__c,  CMN_ExternalCommentCreatedDate__c,  CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMN_CommentCreatedByInformation__c</fullName>
        <description>Used to store either the UACFId or the userID of the found user</description>
        <label>Comment Created By Information</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CommentCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the user information based on the UACF Id received from the Integration</description>
        <label>Comment Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMN_Comment__c</fullName>
        <description>Custom field used to store the comments used for integration</description>
        <label>Comment</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMN_CreatedUser__c</fullName>
        <description>Used to store the user information who created the case comment in url format, so agent can view the created user information</description>
        <formula>IF(NOT(CMN_IsExternalComment__c) , HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;CreatedBy.Id, (CreatedBy.FirstName +&quot; &quot;+ CreatedBy.LastName)),IF(LEN(CMN_CommentCreatedByInformation__c) = 18 , HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;CMN_CommentCreatedBy__r.Id, (CMN_CommentCreatedBy__r.FirstName +&quot; &quot;+ CMN_CommentCreatedBy__r.LastName)), CMN_CommentCreatedByInformation__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ExternalCommentCreatedDate__c</fullName>
        <description>Field used to store the created Date and time for Comments</description>
        <label>External Comment Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMN_ExternalCommentId__c</fullName>
        <description>Custom field used to store the external comment Id received from the external systems via integration</description>
        <label>External Comment Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_IsExternalComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to identify if the Comment was created from the external system or from Salesforce</description>
        <label>Is External Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom field used to identify if the comments are visible for the user</description>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_SourceOfOrigin__c</fullName>
        <formula>IF(CMN_IsExternalComment__c, &apos;Horizon&apos;, &apos;Salesforce&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Of Origin</label>
        <type>Text</type>
    </fields>
    <label>Case Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMN_Case__c</columns>
        <columns>CMN_Comment__c</columns>
        <columns>CMN_CommentCreateDate__c</columns>
        <columns>CMN_CreatedUser__c</columns>
        <columns>CMN_SourceOfOrigin__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>